# OpenAdaptiveRoboticsControlsSystem

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  mkdocs.yml  pyproject.toml  start_services.py  tox.ini  verify_reach.py
.github/workflows/: ci.yml
docs/: index.md  specifications.md
frontend/: .env.example  .eslintrc.js  .prettierrc  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/e2e/: accessibility.a11y.spec.ts  analytics.spec.ts  dashboard.spec.ts  datasets.spec.ts  global-setup.ts  global-teardown.ts  kinematics.spec.ts  navigation.spec.ts  robots.spec.ts  safety.spec.ts  settings.spec.ts  simulator.spec.ts  training.spec.ts  visual.visual.spec.ts
frontend/e2e/fixtures/: base.ts
frontend/playwright-report/: index.html  results.json
frontend/playwright-results/: .last-run.json
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx
frontend/src/components/: error-boundary.tsx
frontend/src/hooks/: use-websocket.ts
frontend/src/lib/: providers.tsx  utils.ts
frontend/src/mocks/: browser.ts  index.ts  server.ts
frontend/src/stores/: connection.ts  index.ts  robot.ts  scene.ts  simulation.ts  training.ts  ui.ts
frontend/src/types/: api.ts  common.ts  dataset.ts  index.ts  kinematics.ts  robot.ts  (+3 more)
src/arcs/: cli.py  config.py  model_fallback.py  mppi.py  safety.py  tracking.py
tests/: test_geometry.py  test_imitation.py  test_perception.py  test_rl.py  test_safety.py  test_sim2real.py  test_simulation.py
(+125 files in other folders)
